--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html,body {
+    margin: 0;
+    padding: 0;
+}
 li {
     margin: .4rem 0;
 }
@@ -6,10 +10,27 @@ select {
 }
 
 .wrapper {
-    width: 100%;
+    width: calc(100% - 40px);
     max-width: 1800px;
+    padding: 0 20px 20px;
     margin: auto;
 }
+
+.title {
+    height: 50px;
+    padding: 20px 0 0;
+    position: sticky;
+    top: 0;
+    background-color: #fff;
+    text-align: center;
+}
+.title h1 {
+    margin: 0;
+    font-size: 34px;
+    font-weight: bolder;
+    font-family: futura;
+}
+
 table {
     width: 100%;
     border-collapse: collapse;
@@ -46,7 +67,7 @@ td > a:visited {
 
 .codecTable thead th {
     position: sticky;
-    top: 90px;
+    top: 149px;
     background-color: #930f0f;
     border: 1px solid #ccc;
     color: #fff;
@@ -56,8 +77,9 @@ td > a:visited {
     display: flex;
     column-gap: 2rem;
     position: sticky;
-    top: 0;
-    padding: 2rem 0;
+    top: 70px;
+    height: 60px;
+    padding: 20px 0 0 0;
     background-color: #fff;
 }
 .filter__label {
